<resources>
    <string name="app_name">Theia</string>
    <string name="title_activity_main">Theia</string>
    <string name="label_no_navigation_data">No navigation data</string>
    <string name="title_activity_destination_selection">Destinations</string>
    <string name="label_menu_item_where_am_i">Where am I</string>
    <string name="toast_you_are_at">You are at %s</string>
    <string name="title_activity_directions">Directions</string>
    <string name="label_text_view_navigating_to">Navigating to: %s</string>
    <string name="label_menu_item_assistance">Assistance</string>
    <string name="title_activity_assistance">Assistance</string>
    <string name="label_button_call_police">Call police</string>
    <string name="label_button_call_volunteer">Call a volunteer</string>
    <string name="label_button_scan_people">Scan for people nearby</string>
    <string name="label_button_emergency_call">Emergency call</string>
    <string name="label_text_view_welcome_to">Welcome to %s!</string>
    <string name="title_activity_add_volunteer">New volunteer form</string>
    <string name="hint_volunteer_name">Volunteer name</string>
    <string name="hint_volunteer_phone">Volunteer phone number</string>
    <string name="label_button_add_volunteer">Add volunteer</string>
</resources>
